Career framework (#150)
* Endpoints for delivering the career framework levels

* Added lint command

* Frontend connected to backend
